--- a/index.html
+++ b/index.html
@@ -1,191 +1,219 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Products App</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
-</head>
-
-<body>
-
-
-
-
-  </ion-item>
-</ion-card>
-
-<ion-card>
-  <ion-item>
-	<ion-icon name="flower" slot="start"></ion-icon>
-	<ion-label></ion-label>
-	<ion-button fill="outline" slot="end">Ver</ion-button>
-  </ion-item>
-
-  <ion-card-content>
-  <center>
-  
-  <img src="https://1.bp.blogspot.com/-nrYsgvMXhOo/YQc0NKhpurI/AAAAAAAAER4/ybtC9MLWAs4_bTNmo_CkqIeQqV5nXcPsgCLcBGAsYHQ/s0/4FC5EF8A-4349-45E0-BD29-54C3E1781783.png" width="20%" height="auto" alt="">
-
-  </center>
-  Mundos virtuales donde puedes socializar con otros jugadores en tiempo real.
-  </ion-card-content>
-</ion-card>
-
-<ion-card>
-  <ion-item href="#" class="ion-activated">
-	<ion-icon name="heart" slot="start"></ion-icon>
-	<ion-label>Amor</ion-label>
-  </ion-item>
-
-  <ion-item href="#">
-	<ion-icon name="diamond-outline" slot="start"></ion-icon>
-	<ion-label>Belleza</ion-label>
-  </ion-item>
-
-  <ion-item class="ion-activated">
-	<ion-icon name="book-outline" slot="start"></ion-icon>
-	<ion-label>Libros</ion-label>
-  </ion-item>
-
-  <ion-item>
-	<ion-icon name="musical-notes-outline" slot="start"></ion-icon>
-	<ion-label>Música</ion-label>
-  </ion-item>
-</ion-card>
-
-
-<ion-card>
-  <ion-item href="#" class="ion-activated">
-	<ion-icon name="videocam-outline" slot="start"></ion-icon>
-	<ion-label>Películas</ion-label>
-  </ion-item>
-
-  <ion-item href="#">
-	<ion-icon name="star-outline" slot="start"></ion-icon>
-	<ion-label>Moda</ion-label>
-  </ion-item>
-
-  <ion-item  <a href="https://www.google.com/" class="ion-activated">
-	<ion-icon name="happy-outline" slot="start"></ion-icon></a>
-	<ion-label>Amistad</ion-label>
-  </ion-item>
-
-  <ion-item>
-	<ion-icon name="add-circle-outline" slot="start"></ion-icon>
-	<ion-label>Ver más</ion-label>
-  </ion-item>
-</ion-card>
-
-	<script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-
-	<!-- LOGIC -->
-	<script src="./app.js"></script>
-</body>
-
-</html>
-
-
-</div>
-<html> <head> <title>Enimak creador de este codigo</title> <body style="background-color: #121212;"> 
-  
- 
-
-
+<meta charset="UTF-8">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+<link rel="stylesheet" href="https://tonflix.github.io/src/css/fontawesome-pro.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<nav class="nav">
-   
-  <a href="#" class="nav__link">
-	<i class="material-icons nav__icon">home</i>
-	<span class="nav__text"></span>
-	
-  </a>
-  <a href="#" class="nav__link">
-	<i class="material-icons nav__icon">campaign</i>
-	<span class="nav__text"></span>
-  </a>
-  
-  <a href="#" class="nav__link">
-  
-  <i class="material-icons nav__icon">explore</i>
-	<span class="nav__text"></span>
-  </a>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript">
+function RemoveAccents(str) {
+  var accents    = 'Megaplay';
+  var accentsOut = 'Megaplay';
+  str = str.split('');
+  var strLen = str.length;
+  var i, x;
+  for (i = 0; i < strLen; i++) {
+    if ((x = accents.indexOf(str[i])) != -1) {
+      str[i] = accentsOut[x];
+    }
+  }
+  return str.join('');
+}
 
-  </a>
-	<a href="#" class="nav__link nav__link--active">
-  
-	<i class="material-icons nav__icon">person</i>
-	<span class="nav__text"></span>
-  </a>
-</nav>
+$(document).ready(function() {
+    $('#myInput').on('input', function() {
+        var value = $(this).val().toLowerCase();
+        $('.canales > .dropdown').filter(function() {
+            $(this).toggle($(this).find('a').attr('title').toLowerCase().indexOf(value) > -1)
+        });
+    });
+});
+</script>
 
 <style type="text/css">
-
-
-
 body {
-	margin: auto;
-	width:auto;
-	height:auto;
-background-image: linear-gradient(to bottom, #631EA8, #421470, #000000);
-
+	font: 20px 'Open Sans', sans-serif;
+	font-weight: bold;
+	background: #000010;
+	user-select: none;
 }
 
-
-.container{
-	width:100%;
-	height:auto;
-}
-.nav {
-	position: fixed;
-	bottom: 0;
-	z-index:99999;
-	width: 100%;
-	height: 10%;
-	box-shadow: ;
-	background-color: black;
-	display: flex;
-	overflow-x: auto;
-}
-
-.nav__link {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	flex-grow: 1;
-	min-width: 50px;
-	overflow: hidden;
-	white-space: nowrap;
-	font-family: sans-serif;
-	font-size: 13px;
-	color: #cccccc;
+a:link {
 	text-decoration: none;
-	-webkit-tap-highlight-color: transparent;
-	transition: background-color 0.1s ease-in-out;
+	color: #bbb;
 }
 
-.nav__link:hover {
-	background-color: #121212;
+a:visited {
+	text-decoration: none;
+	color: #bbb;
 }
 
-.nav__link--active {
-	color: #fff;
+a:hover {
+	text-decoration: none;
+	color: #444;
 }
 
-.nav__icon {
-	font-size: 32px;
-	height: 50px;
-	
+section {
+	display: none;
+	padding: 10px;
 }
 
-		
+input.tab {
+	display: none;
+}
 
+label {
+	display: inline-block;
+	padding: 8px;
+	font-weight: 500;
+	color: #ccd0d2;
+}
+
+label:hover {
+	color: #3EB495;
+	cursor: pointer;
+}
+
+input:checked+label {
+	color: #3EB495;
+/*	border-bottom: 3px solid red;*/
+}
+
+#tab1:checked~#content1,
+#tab2:checked~#content2,
+#tab3:checked~#content3,
+#tab4:checked~#content4,
+#tab5:checked~#content5,
+#tab6:checked~#content6,
+#tab7:checked~#content7 {
+display: block;
+}
+
+.canales {
+	text-align: center;
+}
+
+.canales .card { margin:2px;
+border-radius: 7px; 
+position: center;}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-menu {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 1;
+	display: none;
+	float: left;
+	min-width: 130px;
+	padding: 5px 0;
+	margin: 0 0 0;
+	font-size: 20px;
+	text-align: left;
+	list-style: none;
+	background-color: #fff;
+	-webkit-background-clip: padding-box;
+	background-clip: padding-box;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0, 0, 0, .15);
+	border-radius: 4px;
+	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+	box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
+}
+
+.dropdown-menu>li>a {
+	display: block;
+	padding: 3px 20px;
+	clear: both;
+	font-weight: 400;
+	line-height: 1.42857143;
+	color: #333;
+	white-space: nowrap
+}
+
+.dropdown-menu>li>a:focus,
+.dropdown-menu>li>a:hover {
+	color: #262626;
+	text-decoration: none;
+	background-color: #f5f5f5
+}
+
+.open>.dropdown-menu {
+	display: block
+}
+
+play{
+  left:0;
+  right:0;
+  height:3.5em;
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  justify-content:space-between;
+}
 </style>
 
+<body ondragstart="return false" ondrop="return false" onselectstart="return false" oncontextmenu="return false">
+<center>
+<label><a href="http://action_notifications" style="width:32px;height:30px;"><i class="fas fa-bell"></i></a></label>
+<input class="tab" id="tab1" type="radio" name="tabs" checked>
+<label for="tab1"><i class="material-icons nav__icon">live_tv</i></label>
+<input id="myInput" type="search" placeholder="Buscar..." size="12" style="border-radius: 6px; outline: none; border: 0px; padding: 4px 4px; font-size: 12pt;">
+<input class="tab" id="tab2" type="radio" name="tabs">
+<label for="tab2"><i class="material-icons nav__icon">movie_filter</i></label>
+<label><a href="http://action_exit"><img src="https://raw.githubusercontent.com/Megaplayonline/D15N3Y/main/img/perfil/perfil2.png" style="border:0px solid #fff;border-radius:20px;width:32px;height:30px;"></a></label>
+
+<section id="content1">
+<center><iframe width="97%" heigth="200" allowfullscreen="" name="megaplay" scroll="no" src="" style="background-color:#000; border: 2px solid white;"></iframe>
+<center>
+<hr width="99%" size="0.4" color="red">
+</center>
+<div class="canales">
+<div class="dropdown">
+<a title="Claro Sports" href="https://claro-jw.cdn.vustreams.com/live/channel05/live.isml/live-audio_track_0_0_und=128000-video_track=2800000.m3u8" target="megaplay" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Clarosports.png" width="100vw" height="100vh"></a></div>
+<div class="dropdown">
+<a title="Fox Sports 1" href="https://qlobbidev.s.llnwi.net/bpk-tv/HISTORY2/hls/index.m3u8" target="megaplay" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Foxsports1.png" width="100vw" height="100vh"></a></div>
+<div class="dropdown">
+<a title="Fox Sports 2" href="#" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Foxsports2.png" width="100vw" height="100vh"></a></div>
+<div class="dropdown">
+<a title="Fox Sports 3" href="#" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Foxsports3.png" width="100vw" height="100vh"></a></div>
+<div class="dropdown">
+<a title="Fox Channel Star Channel"href="https://qlobbidev.s.llnwi.net/bpk-tv/FOX/hls/index.m3u8" target="megaplay" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Fox.png" width="100vw" height="100vh"></a></div>
+<div class="dropdown">
+<a title="Telemundo" href="#" class="card dropdown-toggle" data-toggle="dropdown">
+<img class="img" src="https://megaplayonline.github.io/mastertv/img/Telemundo-Novelas.png" width="100vw" height="100vh"></a></div>
+
+
+</div></section>
+<section id="content2">
+<center><iframe width="97%" heigth="200" allowfullscreen="" name="megaflix" scroll="no" src="" style="background-color:#000; border: 2px solid white;"></iframe>
+<center>
+<hr width="99%" size="0.4" color="red">
+</center>
+<div class="canales">
+<div class="dropdown">
+<a href="https://qlobbidev.s.llnwi.net/bpk-tv/HISTORY2/hls/index.m3u8" target="megaflix" class="card dropdown-toggle" data-toggle="dropdown" title="Viuda Negra">
+<img class="img" src="https://www.themoviedb.org/t/p/w220_and_h330_face/ppiL13JJx2LkyoNb8JM0h7nxYmk.jpg" style="border: 2px solid #fff; border-radius: 7px;" width="96vw" height="150vh"></a></div>
+<div class="dropdown">
+<a href="#" class="card dropdown-toggle" data-toggle="dropdown" title="2">
+<img class="img" src="https://www.themoviedb.org/t/p/w220_and_h330_face/ppiL13JJx2LkyoNb8JM0h7nxYmk.jpg" style="border: 2px solid #fff; border-radius: 7px;" width="96vw" height="150vh"></a></div>
+<div class="dropdown">
+<a href="#" class="card dropdown-toggle" data-toggle="dropdown" title="Fox Sports 1">
+<img class="img" src="https://www.themoviedb.org/t/p/w220_and_h330_face/ppiL13JJx2LkyoNb8JM0h7nxYmk.jpg" style="border: 2px solid #fff; border-radius: 7px;" width="96vw" height="150vh"></a></div>
+
+
+</div></section>
 
 
 
+</body>
+</html>
